--- a/style.css
+++ b/style.css
@@ -8,8 +8,27 @@ body {
   color: rgb(110, 150, 200);
   font-size: 15px;
 }
-.button {
-  position: absolute;
-  bottom: 50;
-  left: 800px;
+.githubButton {
+  position: fixed;
+  top: 750px;
+  left: 1000px;
+  height: 30px;
+  width: 80px;
+  background-color: #ffffff;
+  border: 3px solid #8080aa;
+  border-radius: 8px;
+  font-family: Georgia;
+}
+
+.voteButton {
+  height: 30px;
+  width: 150px;
+  background-color: #ffffff;
+  border: 4px solid #8080aa;
+  border-radius: 5px;
+  font-family: Georgia;
+}
+
+.voteButton:active {
+  background-color: #8080aa;
 }
